Added assets, images dir and added images

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Sissor</title>
+    <title>Rock Paper Scissor</title>
 </head>
 <body>
-    <h1>Rock Paper Sissor</h1>
+    <div>
+        <div><img src="./assets/images/rock.png" alt="rock"></div>
+        <div><img src="./assets/images/paper.png" alt="rock"></div>
+        <div><img src="./assets/images/scissor.png" alt="rock"></div>
         
+    </div>        
 </body>
 </html>
