Updated id's of rock, paper and scissor

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
       </nav>
     <div class="container">
-        <div class="img-rock"><img id="image-rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
+        <div class="img-rock"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
     <div class="img-paper-scissor">
-        <div class="img-paper"><img id="image-paper" src="./assets/images/paper.png" alt="paper" onclick="rpsGame(this)"></div>
-        <div class="img-scissor"><img id="image-scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)"></div>
+        <div class="img-paper"><img id="paper" src="./assets/images/paper.png" alt="paper" onclick="rpsGame(this)"></div>
+        <div class="img-scissor"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)"></div>
     </div>   
 </div>  
 <script src="assets/js/script.js"></script>   
