--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     <div class="container" id="final-message">
 
-        <div class="img-rock"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
+        <div class="img-rock" id="rock-img"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
     <div class="img-paper-scissor">
         <div class="img-paper" id="final-image1"><img id="paper" src="./assets/images/paper.png" alt="paper" onclick="rpsGame(this)"></div>
         <div class="img-scissor" id="final-image2"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)"></div>
