--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <!--Navbar Source: https://materializecss.com/navbar.html-->
     <nav>
         <div class="nav-wrapper purple darken-4">
-          <a href="#" class="logo left">ROPAS</a>
-          <ul id="nav-mobile" class="right ">
-            <li><a href="#">Rock</a></li>
-            <li><a href="#">Paper</a></li>
-            <li><a href="#">Scissor</a></li>
+          <a href="index.html" class="logo left"><img src="./assets/images/logo.png" alt="logo"></a>
+          <ul id="nav-mobile" class="right">
+            <li><a>Let's try your luck!</a></li>
           </ul>
         </div>
       </nav>
