Added footer and font awesome icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <script src="https://kit.fontawesome.com/88ce2b0d97.js" crossorigin="anonymous"></script>
     <title>Rock Paper Scissor</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
           </ul>
         </div>
       </nav>
+      <section>
     <div class="container" id="final-message">
 
         <div class="img-rock" id="rock-img"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
@@ -25,6 +27,19 @@
         <div class="img-scissor" id="final-image2"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)"></div>
     </div>   
 </div>  
+</section>
+<footer class="page-footer purple darken-4">
+  
+  <div class="footer-copyright">
+    <div class="copyright-text">
+      © 2014 Copyright MSS
+    </div>
+    <div class="footer-links">
+    <div><a class="" href="#!"><i class="fab fa-github-square"></i></a></div>
+    <div><a class="" href="#!"><i class="fab fa-linkedin"></i></a></div>
+  </div>
+  </div>
+</footer>
 <script src="assets/js/script.js"></script>   
 </body>
 </html>
