Added links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       © 2014 Copyright MSS
     </div>
     <div class="footer-links">
-    <div><a class="" href="#!"><i class="fab fa-github-square"></i></a></div>
-    <div><a class="" href="#!"><i class="fab fa-linkedin"></i></a></div>
+    <div><a target="_blank" href="https://github.com/sohailshams"><i class="fab fa-github-square"></i></a></div>
+    <div><a target="_blank" href="https://www.linkedin.com/in/muhammad-sohail-shams-56995126/"><i class="fab fa-linkedin"></i></a></div>
   </div>
   </div>
 </footer>
