Beautified the code

--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src="https://kit.fontawesome.com/88ce2b0d97.js" crossorigin="anonymous"></script>
-    <title>Rock Paper Scissor</title>
-</head>
-<body>
-    <!--Navbar Source: https://materializecss.com/navbar.html-->
-    <nav>
-        <div class="nav-wrapper purple darken-4">
-          <a href="index.html" class="logo left"><img src="./assets/images/logo.png" alt="logo"></a>
-          <ul id="nav-mobile" class="right">
-            <li><a>Let's try your luck!</a></li>
-          </ul>
-        </div>
-      </nav>
-      <section>
-    <div class="container" id="final-message">
-
-        <div class="img-rock" id="rock-img"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)"></div>     
-    <div class="img-paper-scissor">
-        <div class="img-paper" id="final-image1"><img id="paper" src="./assets/images/paper.png" alt="paper" onclick="rpsGame(this)"></div>
-        <div class="img-scissor" id="final-image2"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)"></div>
-    </div>   
-</div>  
-</section>
-<footer class="page-footer purple darken-4">
-  
-  <div class="footer-copyright">
-    <div class="copyright-text">
-      © 2014 Copyright MSS
-    </div>
-    <div class="footer-links">
-    <div><a target="_blank" href="https://github.com/sohailshams"><i class="fab fa-github-square"></i></a></div>
-    <div><a target="_blank" href="https://www.linkedin.com/in/muhammad-sohail-shams-56995126/"><i class="fab fa-linkedin"></i></a></div>
-  </div>
-  </div>
-</footer>
-<script src="assets/js/script.js"></script>   
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+        <script src="https://kit.fontawesome.com/88ce2b0d97.js" crossorigin="anonymous"></script>
+        <title>Rock Paper Scissor</title>
+    </head>
+    <body>
+        <!--Navbar Source: https://materializecss.com/navbar.html-->
+        <nav>
+            <div class="nav-wrapper purple darken-4">
+                <a href="index.html" class="logo left"><img src="./assets/images/logo.png" alt="logo" /></a>
+                <ul id="nav-mobile" class="right">
+                    <li><a>Let's try your luck!</a></li>
+                </ul>
+            </div>
+        </nav>
+        <section>
+            <div class="container" id="final-message">
+                <div class="img-rock" id="rock-img"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)" /></div>
+                <div class="img-paper-scissor">
+                    <div class="img-paper" id="final-image1"><img id="paper" src="./assets/images/paper.png" alt="paper" onclick="rpsGame(this)" /></div>
+                    <div class="img-scissor" id="final-image2"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)" /></div>
+                </div>
+            </div>
+        </section>
+        <footer class="page-footer purple darken-4">
+            <div class="footer-copyright">
+                <div class="copyright-text">
+                    © 2014 Copyright MSS
+                </div>
+                <div class="footer-links">
+                    <div>
+                        <a target="_blank" href="https://github.com/sohailshams"><i class="fab fa-github-square"></i></a>
+                    </div>
+                    <div>
+                        <a target="_blank" href="https://www.linkedin.com/in/muhammad-sohail-shams-56995126/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="assets/js/script.js"></script>
+    </body>
 </html>
