Added particles in the background and its styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 </ul>
             </div>
         </nav>
-        <section>
+        <section class="outer-container">
+          <div id="particles-js"> </div>
             <div class="container" id="final-message">
                 <div class="img-rock" id="rock-img"><img id="rock" src="./assets/images/rock.png" alt="rock" onclick="rpsGame(this)" /></div>
                 <div class="img-paper-scissor">
@@ -26,6 +27,7 @@
                     <div class="img-scissor" id="final-image2"><img id="scissor" src="./assets/images/scissor.png" alt="scissor" onclick="rpsGame(this)" /></div>
                 </div>
             </div>
+          </div>
         </section>
         <footer class="page-footer purple darken-4">
             <div class="footer-copyright">
@@ -40,8 +42,10 @@
                         <a target="_blank" href="https://www.linkedin.com/in/muhammad-sohail-shams-56995126/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+           
         </footer>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/particles.js"></script>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
